Rename module to virasign.py and update entrypoints

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 ]
 
 [project.scripts]
-virasign = "virasign.reference_selection:main"
+virasign = "virasign.virasign:main"
 
 [tool.setuptools]
 packages = ["virasign"]
