--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -28,9 +28,9 @@ requirements:
     - minimap2 =2.24
     - seqtk =1.3
     - curl =7.88
-    - samtools =1.17
-    - gzip =1.14  # Provides gunzip for RefSeq database extraction
-    - mmseqs2 =2.23394  # Optional but recommended for database clustering
+    - samtools >=1.17
+    - gzip
+    - mmseqs2
 
 test:
   imports:
