--- a/conda-recipes/meta.yml
+++ b/conda-recipes/meta.yml
@@ -40,7 +40,7 @@ test:
 
 about:
   home: https://github.com/DaanJansen94/virasign
-  license: GPL-3.0
+  license: GPL-3.0-or-later
   license_family: GPL
   license_file: LICENSE
   summary: Virasign is a viral taxonomic classification tool designed for nanopore sequencing data.
