--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - minimap2 =2.24
     - seqtk =1.3
     - curl =7.88
-    - samtools >=1.17
+    - samtools =1.16
     - gzip
     - mmseqs2
 
