Update curl and samtools version requirements

--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -27,8 +27,8 @@ requirements:
     - python >=3.7
     - minimap2 =2.24
     - seqtk =1.3
-    - curl =7.88
-    - samtools =1.16
+    - curl
+    - samtools >=1.17
     - gzip
     - mmseqs2
 
