--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - python >=3.7
     - minimap2 =2.24
     - seqtk =1.3
-    - curl
+    - curl  # unpinned so solver can pick libcurl 8.x required by samtools/htslib
     - samtools >=1.17
     - gzip
     - mmseqs2
