--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -14,20 +14,20 @@ build:
   noarch: python
   entry_points:
     - virasign=virasign.virasign:main
-  script: "{{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vvv"
+  script: "python -m pip install . --no-deps --no-build-isolation -vvv"
   run_exports:
     - {{ pin_subpackage(name, max_pin='x.x') }}
 
 requirements:
   host:
-    - python >=3.7
+    - python >=3.7,<3.14
     - pip
     - setuptools
   run:
-    - python >=3.7
+    - python >=3.7,<3.14
     - minimap2 =2.24
     - seqtk =1.3
-    - curl  # unpinned so solver can pick libcurl 8.x required by samtools/htslib
+    - curl  
     - samtools >=1.17
     - gzip
     - mmseqs2
